<resources>
    <string name="app_name">GB-Libraries-Lesson1</string>

    <string name="counter_one">Счетчик 1</string>
    <string name="counter_two">Счетчик 2</string>
    <string name="counter_three">Счетчик 3</string>
    <string name="repo_full_name">repo full name</string>
    <string name="search_hint">Enter keyword e.g. android</string>
    <string name="enter_search_word">Enter search word</string>
    <string name="results_count">Number of results: %d</string>
    <string name="undefined_error">Undefined error</string>
    <string name="decrement_text">-</string>
    <string name="increment_text">+</string>
    <string name="to_details">to details</string>
    <string name="search">search</string>
</resources>